--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
     <meta name="description" content="ASSUVAR - Innovative Solutions" />
     <meta name="author" content="ASSUVAR" />
 
-    <meta property="og:title" content="ASSUVAR" />
-    <meta property="og:description" content="ASSUVAR - Innovative Solutions" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="Check out our Website" />
+    <meta property="og:image" content="public/thumnail.jpg" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@assuvar" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="" />
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
