--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ASSUVAR</title>
-    <meta name="description" content="ASSUVAR - Innovative Solutions" />
-    <meta name="author" content="ASSUVAR" />
+    <meta name="description" content="ASSUVAR" />
+    <meta name="author" content="" />
+    <link rel="icon" href="data:," />
+
 
     <meta property="og:title" content="" />
     <meta property="og:description" content="Check out our Website" />
-    <meta property="og:image" content="https://www.google.com/search?sca_esv=02c0701fb0718bb2&sxsrf=AHTn8zqFyJE_sMgQUdA9ueFl70ggRnOioA:1745339178293&q=google+photos+tech&udm=2&fbs=ABzOT_CWdhQLP1FcmU5B0fn3xuWpA-dk4wpBWOGsoR7DG5zJBkzPWUS0OtApxR2914vrjk7XZXfnfKsaRZouQANLhmphNyg6d7jx9WIegRytfuMfNwBSLAX8WsvrJKa122pJHULT0QMGk7davBushgHE-NJ8R4p9DV6GYGihF5A7HWiF02GLdfHfWuN_Ee3mbhYmzxvktglrZPO0v8t1dJNtsIfjcKjBYw&sa=X&ved=2ahUKEwjrj_CNh-yMAxWGy6ACHc2WKEoQtKgLegQIFRAB&biw=1536&bih=831&dpr=1.25#vhid=iXasvU7nj-XlyM&vssid=mosaic" />
+    <meta property="og:image" content="public/thumnail.jpg" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="" />
-    
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
